tests/baselines/reference/cloduleWithPriorInstantiatedModule.errors.txt
cloduleWithPriorInstantiatedModule.ts(2,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
cloduleWithPriorInstantiatedModule.ts(2,8): error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
cloduleWithPriorInstantiatedModule.ts(13,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== cloduleWithPriorInstantiatedModule.ts (3 errors) ====
    // Non-ambient & instantiated module.
    module Moclodule {
           ~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
           ~~~~~~~~~
!!! error TS2434: A namespace declaration cannot be located prior to a class or function with which it is merged.
        export interface Someinterface {
            foo(): void;
        }
        var x = 10;
    }
    
    class Moclodule {
    }
    
    // Instantiated module.
    module Moclodule {
           ~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class Manager {
        }
    }